crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__assignment.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    Identifier 0..10,
    Equal 11..12,
    Int 13..15,
    Plus 16..17,
    Int 18..19,
    Minus 19..20,
    Int 20..21,
    Newline 21..21,
]
```
