crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_at_column_zero.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
---
## Tokens
```
[
    (
        Def,
        0..3,
    ),
    (
        Name(
            Name("f"),
        ),
        4..5,
    ),
    (
        Lpar,
        5..6,
    ),
    (
        Rpar,
        6..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..9,
    ),
    (
        Indent,
        9..13,
    ),
    (
        If,
        13..15,
    ),
    (
        True,
        16..20,
    ),
    (
        Colon,
        20..21,
    ),
    (
        Newline,
        21..22,
    ),
    (
        Indent,
        22..30,
    ),
    (
        Return,
        30..36,
    ),
    (
        True,
        37..41,
    ),
    (
        Newline,
        41..42,
    ),
    (
        Dedent,
        46..46,
    ),
    (
        Else,
        46..50,
    ),
    (
        Colon,
        50..51,
    ),
    (
        Newline,
        51..52,
    ),
    (
        Indent,
        52..62,
    ),
    (
        Return,
        62..68,
    ),
    (
        False,
        69..74,
    ),
    (
        Newline,
        74..75,
    ),
    (
        Dedent,
        75..75,
    ),
    (
        Dedent,
        75..75,
    ),
]
```
