crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_at_column_zero_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: backslash_continuation_at_column_zero_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        Def,
        0..3,
    ),
    (
        Name(
            Name("f"),
        ),
        4..5,
    ),
    (
        Lpar,
        5..6,
    ),
    (
        Rpar,
        6..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..10,
    ),
    (
        Indent,
        10..14,
    ),
    (
        If,
        14..16,
    ),
    (
        True,
        17..21,
    ),
    (
        Colon,
        21..22,
    ),
    (
        Newline,
        22..24,
    ),
    (
        Indent,
        24..32,
    ),
    (
        Return,
        32..38,
    ),
    (
        True,
        39..43,
    ),
    (
        Newline,
        43..45,
    ),
    (
        Dedent,
        49..49,
    ),
    (
        Else,
        49..53,
    ),
    (
        Colon,
        53..54,
    ),
    (
        Newline,
        54..56,
    ),
    (
        Indent,
        56..67,
    ),
    (
        Return,
        67..73,
    ),
    (
        False,
        74..79,
    ),
    (
        Newline,
        79..81,
    ),
    (
        Dedent,
        81..81,
    ),
    (
        Dedent,
        81..81,
    ),
]
```
