crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__backslash_continuation_dedent_error_windows_eol.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: backslash_continuation_dedent_error_eol(WINDOWS_EOL)
---
## Tokens
```
[
    (
        Def,
        0..3,
    ),
    (
        Name(
            Name("f"),
        ),
        4..5,
    ),
    (
        Lpar,
        5..6,
    ),
    (
        Rpar,
        6..7,
    ),
    (
        Colon,
        7..8,
    ),
    (
        Newline,
        8..10,
    ),
    (
        Indent,
        10..14,
    ),
    (
        Pass,
        14..18,
    ),
    (
        Newline,
        18..20,
    ),
    (
        Unknown,
        20..29,
    ),
    (
        Name(
            Name("x"),
        ),
        29..30,
    ),
    (
        Equal,
        31..32,
    ),
    (
        Int(
            1,
        ),
        33..34,
    ),
    (
        Newline,
        34..36,
    ),
]
```
## Errors
```
[
    LexicalError {
        error: IndentationError,
        location: 20..29,
    },
]
```
